# truecallerpy

./: .gitignore  .gitkeep  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
src/truecallerpy/: __init__.py  cli.py  login.py  search.py  verify_otp.py
src/truecallerpy/data/: phones_list.py
src/truecallerpy/typings/: truecallerpy.pyi
test/: bulksearch.py  search.py
tests/: bulksearch.py  test_truecallerpy.py
truecallerpy/: __init__.py  app.py  phonesList.py  truecallerLogin.py  version.py
